--- a/Final/appsettings.json
+++ b/Final/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "data source=(localdb)\\MSSQLLocalDB;Initial Catalog=Final;Integrated Security=True;",
+    "IdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Final;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
